tests/bad/int5.pas
program int;
var i: not_there;
begin

end.
